tests/negative/for_bad_target.spk
(for (a b c) '(1 2) (print "$0" a))
